--- a/frontend/src/components/Equipment/Needles.css
+++ b/frontend/src/components/Equipment/Needles.css
@@ -1,48 +1,4 @@
-.image-for-needles-verifine4mm {
-    position: fixed;
-    top: 45%;
-    left: 150px;
-    height: 700px;
-    width: 380px;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    text-align: center;
-}
-
-.image-for-needles-verifine6mm {
-    position: fixed;
-    top: 45%;
-    left: 600px;
-    height: 700px;
-    width: 380px;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    text-align: center;
-}
-
-.image-for-needles-insupen8mm {
-    position: fixed;
-    top: 45%;
-    left: 1050px;
-    height: 700px;
-    width: 380px;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    text-align: center;
-}
-
-.image-for-needles-insupen4mm {
-    position: fixed;
-    top: 45%;
-    left: 1460px;
-    height: 710px;
-    width: 380px;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    text-align: center;
-}
-
-.needles-verifine4mm-photo {
+.needles-photo {
     height: 300px;
     width: 300px;
     position:relative;
@@ -51,34 +7,7 @@
     opacity: 0.8;
 }
 
-.needles-verifine6mm-photo {
-    height: 300px;
-    width: 300px;
-    position:relative;
-    bottom: 0%;
-    left: 15%;
-    opacity: 0.8;
-}
-
-.needles-insupen8mm-photo {
-    height: 300px;
-    width: 300px;
-    position:relative;
-    bottom: 0%;
-    left: 15%;
-    opacity: 0.8;
-}
-
-.needles-insupen4mm-photo {
-    height: 300px;
-    width: 300px;
-    position:relative;
-    bottom: 0%;
-    left: 15%;
-    opacity: 0.8;
-}
-
-.h2-position-needles-verifine4mm {
+.h2-position-needles {
     align-items: center;
     justify-content: center;
     color: rgb(0, 0, 0);
@@ -89,76 +18,7 @@
     left: 22%;
 }
 
-.h2-position-needles-verifine6mm {
-    align-items: center;
-    justify-content: center;
-    color: rgb(0, 0, 0);
-    position: absolute;
-    width: 350px;
-    height: 350px;
-    bottom: 10%;
-    left: 22%;
-}
-
-.h2-position-needles-insupen8mm {
-    align-items: center;
-    justify-content: center;
-    color: rgb(0, 0, 0);
-    position: absolute;
-    width: 350px;
-    height: 350px;
-    bottom: 10%;
-    left: 22%;
-}
-
-.h2-position-needles-insupen4mm {
-    align-items: center;
-    justify-content: center;
-    color: rgb(0, 0, 0);
-    position: absolute;
-    width: 350px;
-    height: 350px;
-    bottom: 10%;
-    left: 22%;
-}
-
-.image__description-needles-verifine4mm {
-    font-size: 1.00em;
-    margin-top: 5.25em;
-    font-weight: 400;
-    color: rgb(0, 0, 0);
-    position: relative;
-    bottom: 30px;
-    left: 75px;
-    margin-left: 35px;
-    margin-right: 60px;
-}
-
-.image__description-needles-verifine6mm {
-    font-size: 1.00em;
-    margin-top: 5.25em;
-    font-weight: 400;
-    color: rgb(0, 0, 0);
-    position: relative;
-    bottom: 30px;
-    left: 75px;
-    margin-left: 35px;
-    margin-right: 60px;
-}
-
-.image__description-needles-insupen8mm {
-    font-size: 1.00em;
-    margin-top: 5.25em;
-    font-weight: 400;
-    color: rgb(0, 0, 0);
-    position: relative;
-    bottom: 30px;
-    left: 75px;
-    margin-left: 35px;
-    margin-right: 60px;
-}
-
-.image__description-needles-insupen4mm {
+.image__description-needles {
     font-size: 1.00em;
     margin-top: 5.25em;
     font-weight: 400;
