--- a/frontend/src/components/SlideMenu/MoveDownMore.css
+++ b/frontend/src/components/SlideMenu/MoveDownMore.css
@@ -1,14 +1,17 @@
-  .movedown-menu-more {
-    background: rgb(0, 0, 0);
-    min-width: 110px;
-    height: 75px;
-    position: absolute;
-    left: 915px;
-    list-style: none;
-    text-align: center;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-  
+.movedown-menu-more {
+  background: rgb(0, 0, 0);
+  position: absolute;
+  width: 110px;
+  top: 50px;
+  right: 860px;
+  list-style: none;
+  text-align: center;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  font-size: 15px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
   .movedown-link-more {
     display: block;
     height: 100%;
