--- a/MobileApp/app/src/main/res/layout/activity_main.xml
+++ b/MobileApp/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,16 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvDiabetesMobileApp"
+        android:id="@+id/rvDziennik"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/etDiabetesMobileAppTitle"
+        app:layout_constraintBottom_toTopOf="@+id/etDziennik"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etDiabetesMobileAppTitle"
+        android:id="@+id/etDziennik"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="DD/MM - hh:mm - cukier"
