I made some fix in code to avoid errors

--- a/frontend/src/components/Equipment/Glucometers.css
+++ b/frontend/src/components/Equipment/Glucometers.css
@@ -51,7 +51,7 @@
     margin-right: 60px;
   }
 
-  .image__description {
+  .image__description-glu {
     font-size: 1.00em;
     margin-top: 5.25em;
     font-weight: 400;
